syntax = "proto3";

package pb;

option go_package = "../pb";

service  message{
}

// 定义消息类型枚举
enum MessageType {
    UNKNOWN = 0;
    COMMAND = 1;
    PROXY_SESSION_CREATE = 2;
    PROXY_SESSION_DATA = 3;
    PROXY_SESSION_CLOSE = 4;
}

enum CommandType {
    INVALID_COMMAND = 0;
    DOWNLOAD_IMAGE = 1;
    DOWNLOAD_TASK_DELETE = 2;
    DOWNLOAD_TASK_LIST = 3;
    DOWNLOAD_TASK_GET = 4;
    SSH_AUTH = 5;
    HOST_INFO = 6;
    LIST_NVME = 7;
}


// 定义命令消息体
message Command {
    CommandType type = 1;
    bytes data = 2;
}

// 目标地址
message DestAddr {
    string network = 1;
    string addr = 2;
}


// 定义通用消息体
message Message {
    MessageType type = 1;
    string session_id = 2;
    bytes payload = 3;
}

message CmdDownloadImageRequest {
    string url = 1;
    string md5 = 2;
    string path = 3;
}


message CmdDownloadImageResponse {
    bool success =1;
    string err_msg =2;
    string task_id =3;
}

message DownloadTask {
    string id = 1;
    string url = 2;
    string md5 = 3;
    string path = 4;
    int64 total_size = 5;
    int64 download_size = 6;
    bool running = 7;
    bool success = 8;
    string err_msg = 9;
}

message CmdDownloadTaskListResponse {
    repeated DownloadTask tasks = 1;
}


message CmdDownloadTaskDeleteRequest {
    string task_id = 1;
}

message CmdDownloadTaskDeleteResponse {
    bool success =1;
    string message =2;
}

message CmdDownloadTaskGetRequest{
    string task_id = 1;
}

message CmdDownloadTaskGetResponse{
    bool success =1;
    string err_msg =2;
    DownloadTask task =3;
}

message CmdSSHAuthRequest {
    bytes ssh_pub_key = 1;
    bytes multipass_cert = 2;
}

message CmdSSHAuthResponse {
    int32 ssh_port = 1;
    bool success =2;
    string err_msg =3;
}

message CPU {
    int32 num = 1;
    float usage = 2;
    string arch = 3;
    string vendor = 4;
}

message Memory {
    int64 total = 1;
    int64 used = 2;
}

message Disk {
    string name = 1;
    string type = 2;
    uint64 total = 3;
    uint64 used = 4;
    string mountPoint = 5;
    string fs_type = 6;
}

enum NetworkInterfaceFlags {
    INVALID = 0;
    UP = 1;
    BROADCAST = 2;
    LOOPBACK = 3;
    POINT_TO_POINT = 4;
    MULTICAST = 5;
    RUNNING = 6;
}

message NetwrokInterface {
    string name = 1;
    string mac = 2;
    uint32 flags = 3;
}

message CmdHostInfoResponse {
    CPU cpu = 1;
    Memory memory = 2;
    repeated Disk disks = 3;
    repeated NetwrokInterface interfaces = 4;
}

message NvmeInfo {
    string name = 1;
    string pci_addr = 2;
}
message CmdListNvmeResponse {
    repeated NvmeInfo nvmes = 1;
}